--- a/PDC06_Module08/PDC06_Module08/MainPage.xaml
+++ b/PDC06_Module08/PDC06_Module08/MainPage.xaml
@@ -5,6 +5,7 @@
 
     <StackLayout>
         <Button Text="Add Records" Clicked="OnAdd"></Button>
+        <Button Text="Search Page" Clicked="SearchPageClicked"></Button>
         <Button Text="Refresh" Clicked="OnRefresh"></Button>
         <Entry x:Name="xUsername" Placeholder="Username"></Entry>
         <Entry x:Name="xPassword" Placeholder="Password"></Entry>
